crates/plotnik-tests/tests/04-emit/types/recursion/error_captured_ref_via_recursive_alias.txt
A = (B)

B = {
  (debugger_statement)
  (statement_block
    (A) @x
  )? @s
}
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:6:5
  |
1 | A = (B)
  | ------- `A` is defined here
...
6 |     (A) @x
  |     ^^^
  |
help: make `A` produce a result before collecting or capturing its value
help: or remove `@x` and capture a node pattern directly
